# disease_sims

./: .gitmodules  CompileTest.R  Makefile  Makefile.am  Makefile.in  README.md  Rcpp_functions.cc  TFL2013.cc  TFL2013_ind.cc  TFL_fitness_models.hpp  TODO  ccintermediate.cc  ccintermediate.hpp  chksimoutput.cc  config-h.in.in  config.h.in  configure  configure.ac  esm_chisq_zscore.cc  gene_based_model.hpp  locking_routines.cc  logit_power.R  make_case_control.cc  multiplicative_model.hpp  mutation_with_age.hpp  readCC.cc  readCC.hpp  readMuts.R  runSKAT_old.R  simindex.cc  simindex.hpp  single_marker_test.R  test_workflow.sh
R/: README.md  local_install_example.sh  runSKAT.R  sigGenos.R  single_marker_test.R
R/diseaseSims/: DESCRIPTION  NAMESPACE  configure  configure.ac  redoc_hpc.sh
R/diseaseSims/R/: RcppExports.R  cc2plink.R  ccLD.R  diseaseSims-package.r  getRiskVariantMatrix.R  getRiskVariantMatrixDominance.R  getRiskVariantMatrixDominanceSubset.R  getRiskVariantMatrixSubset.R  logitTests.R  procIndex.R  vpv1.R  vpv1aov.R  vpv1aovDomi.R  vpv1aovDomiChunk.R
R/diseaseSims/data/: ccblock.RData  esizes.RData
R/diseaseSims/inst/doc/: BurdenTests1.html  CaseControl.Rmd  CaseControl.html  FileLocking.Rmd  FileLocking.html  Heritability1.R  Heritability1.Rmd  Heritability1.html  Indexfiles.Rmd  Indexfiles.html  SFS.R  SFS.html  Technicalities.html  VarianceExplained.R  VarianceExplained.Rmd  VarianceExplained.html
R/diseaseSims/inst/extdata/: index.txt
R/diseaseSims/man/: Lock.Rd  Unlock.Rd  bestHits.Rd  cc2plink.Rd  ccLD.Rd  ccblock.Rd  ccblock.dsdata.Rd  ccpvals.Rd  diseaseSims.Rd  esizes.dsdata.Rd  getCCblock.Rd  getCCids.Rd  getEsizes.Rd  getPheno.Rd  getRiskVariantMatrix.Rd  getVariantMatrix.Rd  getVariantMatrixSubset.Rd  gzLock.Rd  gzUnlock.Rd  logit.additive.Rd  logit.dominant.Rd  logit.recessive.Rd  makePVblock.Rd  procIndex.Rd  sampleCCfromPop.Rd  sfs.Rd  vp.Rd  vpv1.Rd  vpv1aov.Rd  writeDataFrame.Rd  writeMatrix.Rd  writePVblock.Rd
R/diseaseSims/src/: Makevars  Makevars.in  RcppExports.cpp  SimPopData.hpp  cc2plink.cc  getRiskVariantMatrix.cc  matManip.cc  matManip.hpp  output.cc  readData.cc  sfs.cc  writePVblock.cc
R/diseaseSims/vignettes/: BurdenTests1.Rmd  SFS.Rmd  Technicalities.Rmd  VarianceExplained.Rmd
association_tests/: README.md  example.sh  runSKAT.R
common/: Makefile  readSimOutput.cc  readSimOutput.hpp
diseaseSims/: Makefile.am  Makefile.in  ccintermediate.hpp  mutation_with_age.hpp  traitValues.hpp  util.hpp
doc/: binaryFormats.dvi  binaryFormats.tex  binaryFormats.tex~
example_workflow/: README.md  README.md~  esmTest.sh  logit_power_table.sh  makeCC.sh  runtest.sh  setup.sh  singleMarker.sh  submit.sh
scripts/: README.md  burdenPerm.R  burdenPermP.R  burdens.R  cch2.R  example_workflow.sh  logit.R  permit.sh  skat.R  test_workflow.sh  vexpl.R
src/: CCburden.cc  EyreWalker_fitness.hpp  Makefile.am  Makefile.in  TFL2013.cc  TFL2013_ind.cc  TFL2013_ind_params.cc  TFL2013_ind_params.hpp  TFL_fitness_models.hpp  ccintermediate.cc  ccintermediate.hpp  chksimoutput.cc  esm_chisq_zscore.cc  genburden.cc  gene_based_model.hpp  gwas_stats.hpp  make_case_control.cc  make_case_controlEW.cc  multiplicative_model.hpp  mutation_with_age.hpp  phenoburden.cc  popgen_model.hpp  readCC.hpp  readSimOutput.cc  readSimOutput.hpp  riskmatrix.cc  sampleSFS.cc  sfs.cc  sfsSample.cc  simindex.cc  simindex.hpp  util.cc  vxv1.cc
utilities/: CCburden.cc  Makefile  README.md  phenoburden.cc  sfsSample.cc
